--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,15 @@ markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
 line-length = 119
 extend-exclude = '''
 (
-  venv/
-  | venv
+  .venv/
+  | .venv
 )
 '''
 
 [tool.flake8]
 docstring-convention = "all"
 ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
-exclude = ["venv"]
+exclude = [".venv"]
 max-line-length = 119
 
 # radon
@@ -27,13 +27,13 @@ line_length = 119
 
 [tool.pylint."messages control"]
 disable = [
-  "line-too-long",
-  "trailing-whitespace",
-  "missing-function-docstring",
-  "consider-using-f-string",
-  "import-error",
-  "too-few-public-methods",
-  "redefined-outer-name",
+    "line-too-long",
+    "trailing-whitespace",
+    "missing-function-docstring",
+    "consider-using-f-string",
+    "import-error",
+    "too-few-public-methods",
+    "redefined-outer-name",
 ]
 
 [tool.ruff]
