--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,4 +42,8 @@
         }
     ],
     "makefile.configureOnOpen": false,
+    "terminal.integrated.env.windows": {
+        "CHERE_INVOKING": "1"
+    },
+    "workbench.editor.wrapTabs": true
 }
