--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -43,5 +43,7 @@
         "ms-vscode.makefile-tools",
         // pdf
         "tomoki1207.pdf",
+        // svg
+        "SimonSiefke.svg-preview"
     ]
 }
