--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -48,6 +48,8 @@
         // svg
         "SimonSiefke.svg-preview",
         // mdx
-        "unifiedjs.vscode-mdx"
+        "unifiedjs.vscode-mdx",
+        // groovy
+        "NicolasVuillamy.vscode-groovy-lint"
     ]
 }
