--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -30,9 +30,9 @@
         "ms-azuretools.vscode-docker",
         // GitHub
         "github.vscode-github-actions",
-        // "GitHub.copilot",
-        // "GitHub.copilot-labs",
-        "Codeium.codeium",
+        "GitHub.copilot",
+        "GitHub.copilot-labs",
+        // "Codeium.codeium",
         // Ctrl+Alt+V / Cmd+Alt+V paste image from clipboard
         "mushan.vscode-paste-image",
         // autocompletion for file paths
